# rust-solana-walkthrough

./: .gitignore
hello-solana/: package-lock.json  package.json  readme.MD
hello-solana/src/client/: index.ts
hello-solana/src/program/: Cargo.toml  readme.MD
hello-solana/src/program/src/: lib.rs
