[package]
name = "hello_solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.15.2"

[dev-dependencies]
solana-program-test = "1.15.2"
solana-sdk = "1.15.2"

[lib]
name = "hello_solana"
crate-type = ["cdylib", "lib"]